nat64lsn: Fix type confusion panic when using wrong NAT64 instance type

When an ipfw rule references a NAT64 instance by name using 'nat64lsn',
the kernel looks up the instance in the shared srvstate[] array without
verifying the instance type.  If the named instance is actually a nat64clat
or nat64stl instance (created with 'nat64clat' or 'nat64stl'), the code
incorrectly casts the instance to nat64lsn_instance and dereferences the
->cfg pointer, which causes a kernel panic due to type confusion.

The root cause is that all NAT64 instance types share the same srvstate[]
array but have different struct layouts.  For nat64lsn_instance, offset
after 'no' contains a pointer to nat64lsn_cfg.  For nat64clat_cfg, the
same offset contains embedded struct data (nat64_config base), not a
pointer.  When the code dereferences this as a pointer, it gets garbage
and crashes.

Fix by adding a type check after NAT64_LOOKUP() to verify that the
instance's etlv matches IPFW_TLV_NAT64LSN_NAME before proceeding.
If the type doesn't match, return IP_FW_DENY to reject the packet
safely rather than crashing.

PR:		292023
Signed-off-by: Teddy Engel <engel.teddy@gmail.com>